[package]
name = "gridlock"
version = "0.1.0"
edition = "2021"
authors = ["Maksymilian Neumann<neumann.maks@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_hc = "0.3.2"
rand_distr = "0.4.3"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.1.1"
